@@ -22,6 +22,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Edgware.SR1</spring-cloud.version>
+
+        <additional-jvm-properties> </additional-jvm-properties>
     </properties>
 
     <dependencies>
@@ -79,6 +81,18 @@
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>java9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <properties>
+                <additional-jvm-properties>--add-modules java.xml.bind</additional-jvm-properties>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -86,6 +100,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <addResources>true</addResources>
+                    <jvmArguments>${additional-jvm-properties}</jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
